# book_recommender

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  requirements.txt  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml
app/: ann.py  demo.py  external.py  library.py  recommender.py  search.py  service.py  store.py
data/: real_books.json  real_cf.npz  real_embeddings.npz  real_profiles.json  recent_books.json  sample_books.json  sample_profiles.json  topup_head.json
docs/: scaling-to-1m.md
eval/: cold_start.py  compare_paradigms.py  data.py  diversity.py  embedders.py  learned_rerank.py  metrics.py  profiles.py  recommenders.py  run.py  served_eval.py
scripts/: add_books.py  build_embeddings.py  build_real_dataset.py  cf_build.py  enrich_bulk.py  enrich_google_books.py  fetch_google_books.py  fetch_new_books.py  finetune_coread.py  freeport.py  hygiene.py  ingest_amazon_reviews.py  ingest_goodreads_ucsd.py  ingest_openlibrary_dump.py  promote_catalog.py  rebuild_cf.py  refresh.py  refresh_subjects.py
tests/: conftest.py  test_cf_build.py  test_data.py  test_embedders.py  test_enrich_bulk.py  test_enrich_google_books.py  test_external.py  test_fetch_new_books.py  test_hygiene.py  test_ials.py  test_ingest_goodreads.py  test_library.py  test_metrics.py  test_profiles.py  test_recommender.py  test_recommender_cf_weight.py  test_refresh_subjects.py  test_search.py  test_store.py  test_tail_slots.py
