[project]
name = "book-recommender"
version = "0.1.0"
description = "Swipe-based book recommender: seed, swipe, and adaptive-hybrid recommendations."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "streamlit>=1.57",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "scipy>=1.18.0",
]

[tool.uv]
# torch's default PyPI wheels are CPU-only on Windows, which is what we want.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "eval"]
